--- a/index.html/index.html
+++ b/index.html/index.html
@@ -13,29 +13,32 @@
     html, body {
       width: 100%;
       height: 100%;
-      overflow: hidden;
       background: #fff;
     }
     #viewer {
       width: 100%;
-      height: 100%;
+      min-height: 100%;
       display: flex;
       flex-direction: column;
     }
     #canvasContainer {
       flex: 1;
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: center;
-      overflow: hidden;
       background: #fff;
       padding: 10px;
     }
     #pdfCanvas {
       display: block;
       max-width: 100%;
+      max-height: calc(100vh - 60px);
     }
     #controls {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -67,27 +70,17 @@
       min-width: 100px;
       text-align: center;
     }
-    #loading {
+    #loading, #error {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       font-family: system-ui, -apple-system, sans-serif;
-      font-size: 16px;
-      color: #666;
-    }
-    #error {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-family: system-ui, -apple-system, sans-serif;
-      font-size: 14px;
-      color: #b00020;
       text-align: center;
       padding: 20px;
-      display: none;
     }
+    #loading { font-size: 16px; color: #666; }
+    #error { font-size: 14px; color: #b00020; display: none; }
   </style>
 </head>
 <body>
@@ -132,11 +125,13 @@
 
       pdfDoc.getPage(num).then(function(page) {
         var containerWidth = canvasContainer.clientWidth - 20;
+        var containerHeight = canvasContainer.clientHeight - 20;
 
         var originalViewport = page.getViewport({ scale: 1 });
         
-        // 가로 폭에만 맞추기 (세로 여백 제거)
-        var baseScale = containerWidth / originalViewport.width;
+        var scaleX = containerWidth / originalViewport.width;
+        var scaleY = containerHeight / originalViewport.height;
+        var baseScale = Math.min(scaleX, scaleY);
 
         var pixelRatio = Math.max(window.devicePixelRatio || 1, 2);
         var scale = baseScale * pixelRatio;
