--- a/index.html/index.html
+++ b/index.html/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>PDF Viewer</title>
   <style>
     * {
@@ -14,10 +14,11 @@
       width: 100%;
       height: 100%;
       background: #fff;
+      overflow: hidden;
     }
     #viewer {
       width: 100%;
-      min-height: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
     }
@@ -27,47 +28,67 @@
       align-items: center;
       justify-content: center;
       background: #fff;
-      padding: 10px;
+      overflow: hidden;
     }
     #pdfCanvas {
       display: block;
-      max-width: 100%;
-      max-height: calc(100vh - 60px);
     }
     #controls {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
       display: flex;
-      justify-content: center;
       align-items: center;
-      gap: 20px;
-      padding: 12px;
-      background: #f8f8f8;
-      border-top: 1px solid #e0e0e0;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 14px;
-      cursor: pointer;
-      border: 1px solid #ccc;
+      padding: 12px 16px;
       background: #fff;
-      border-radius: 6px;
-      transition: background 0.2s;
+      border-top: 1px solid #eee;
+      gap: 12px;
     }
-    button:hover:not(:disabled) {
-      background: #f0f0f0;
+    .nav-btn {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      background: #f5f5f5;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: all 0.2s;
+      flex-shrink: 0;
     }
-    button:disabled {
-      opacity: 0.4;
+    .nav-btn:hover:not(:disabled) {
+      background: #e8e8e8;
+    }
+    .nav-btn:disabled {
+      opacity: 0.3;
       cursor: not-allowed;
+    }
+    .nav-btn svg {
+      width: 20px;
+      height: 20px;
+      fill: #333;
+    }
+    #progressWrapper {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+    #progressBar {
+      width: 100%;
+      height: 4px;
+      background: #eee;
+      border-radius: 2px;
+      overflow: hidden;
+    }
+    #progressFill {
+      height: 100%;
+      background: #2563eb;
+      border-radius: 2px;
+      transition: width 0.3s ease;
     }
     #pageInfo {
       font-family: system-ui, -apple-system, sans-serif;
-      font-size: 14px;
-      color: #333;
-      min-width: 100px;
+      font-size: 12px;
+      color: #666;
       text-align: center;
     }
     #loading, #error {
@@ -79,7 +100,7 @@
       text-align: center;
       padding: 20px;
     }
-    #loading { font-size: 16px; color: #666; }
+    #loading { font-size: 14px; color: #666; }
     #error { font-size: 14px; color: #b00020; display: none; }
   </style>
 </head>
@@ -87,13 +108,20 @@
   <div id="viewer">
     <div id="canvasContainer">
       <canvas id="pdfCanvas"></canvas>
-      <div id="loading">Loading PDF...</div>
+      <div id="loading">Loading...</div>
       <div id="error"></div>
     </div>
     <div id="controls">
-      <button id="prevBtn">Prev</button>
-      <span id="pageInfo"></span>
-      <button id="nextBtn">Next</button>
+      <button class="nav-btn" id="prevBtn" aria-label="Previous">
+        <svg viewBox="0 0 24 24"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
+      </button>
+      <div id="progressWrapper">
+        <div id="progressBar"><div id="progressFill"></div></div>
+        <div id="pageInfo"></div>
+      </div>
+      <button class="nav-btn" id="nextBtn" aria-label="Next">
+        <svg viewBox="0 0 24 24"><path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/></svg>
+      </button>
     </div>
   </div>
 
@@ -105,6 +133,7 @@
     var prevBtn = document.getElementById("prevBtn");
     var nextBtn = document.getElementById("nextBtn");
     var pageInfo = document.getElementById("pageInfo");
+    var progressFill = document.getElementById("progressFill");
     var loading = document.getElementById("loading");
     var errorDiv = document.getElementById("error");
     var canvasContainer = document.getElementById("canvasContainer");
@@ -119,13 +148,19 @@
       errorDiv.textContent = msg;
     }
 
+    function updateProgress() {
+      var percent = (pageNum / pdfDoc.numPages) * 100;
+      progressFill.style.width = percent + "%";
+      pageInfo.textContent = pageNum + " / " + pdfDoc.numPages;
+    }
+
     function renderPage(num) {
       if (!pdfDoc || rendering) return;
       rendering = true;
 
       pdfDoc.getPage(num).then(function(page) {
-        var containerWidth = canvasContainer.clientWidth - 20;
-        var containerHeight = canvasContainer.clientHeight - 20;
+        var containerWidth = canvasContainer.clientWidth;
+        var containerHeight = canvasContainer.clientHeight;
 
         var originalViewport = page.getViewport({ scale: 1 });
         
@@ -149,7 +184,7 @@
           viewport: viewport
         }).promise.then(function() {
           pageNum = num;
-          pageInfo.textContent = pageNum + " / " + pdfDoc.numPages;
+          updateProgress();
           prevBtn.disabled = pageNum <= 1;
           nextBtn.disabled = pageNum >= pdfDoc.numPages;
           rendering = false;
@@ -199,7 +234,7 @@
 
     function initPDF() {
       if (typeof pdfjsLib === "undefined") {
-        showError("PDF library failed to load. Please refresh the page.");
+        showError("PDF library failed to load.");
         return;
       }
       
@@ -213,16 +248,13 @@
         })
         .catch(function(e) {
           showError("Failed to load PDF: " + e.message);
-          console.error(e);
         });
     }
 
     var script = document.createElement("script");
     script.src = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js";
     script.onload = initPDF;
-    script.onerror = function() {
-      showError("Failed to load PDF library.");
-    };
+    script.onerror = function() { showError("Failed to load PDF library."); };
     document.head.appendChild(script);
   </script>
 </body>
