--- a/index.html/index.html
+++ b/index.html/index.html
@@ -41,10 +41,10 @@
     #controls {
       display: flex;
       align-items: center;
-      padding: 12px 16px;
+      padding: 16px;
       background: #fff;
       border-top: 1px solid #eee;
-      gap: 12px;
+      gap: 16px;
     }
     .nav-btn {
       width: 40px;
@@ -74,11 +74,11 @@
     #progressWrapper {
       flex: 1;
       display: flex;
-      flex-direction: column;
-      gap: 6px;
+      align-items: center;
+      gap: 12px;
     }
     #progressBar {
-      width: 100%;
+      flex: 1;
       height: 4px;
       background: #eee;
       border-radius: 2px;
@@ -92,9 +92,9 @@
     }
     #pageInfo {
       font-family: system-ui, -apple-system, sans-serif;
-      font-size: 12px;
+      font-size: 13px;
       color: #666;
-      text-align: center;
+      white-space: nowrap;
     }
     #loading, #error {
       position: absolute;
@@ -175,10 +175,8 @@
         
         var baseScale;
         if (isMobile()) {
-          // 모바일: 가로폭에 꽉 맞춤
           baseScale = containerWidth / originalViewport.width;
         } else {
-          // 데스크톱: 컨테이너에 fit
           var scaleX = containerWidth / originalViewport.width;
           var scaleY = containerHeight / originalViewport.height;
           baseScale = Math.min(scaleX, scaleY);
