--- a/index.html/index.html
+++ b/index.html/index.html
@@ -12,15 +12,18 @@
     }
     html, body {
       width: 100%;
-      height: 100%;
       background: #fff;
-      overflow: hidden;
     }
     #viewer {
       width: 100%;
-      height: 100%;
       display: flex;
       flex-direction: column;
+      min-height: 100vh;
+    }
+    @media (max-width: 767px) {
+      #viewer {
+        min-height: auto;
+      }
     }
     #canvasContainer {
       flex: 1;
@@ -32,20 +35,32 @@
     }
     @media (max-width: 767px) {
       #canvasContainer {
-        align-items: flex-start;
+        flex: none;
       }
     }
     #pdfCanvas {
       display: block;
+    }
+    #controlsWrapper {
+      background: #fff;
+    }
+    #progressBar {
+      width: 100%;
+      height: 3px;
+      background: #eee;
+    }
+    #progressFill {
+      height: 100%;
+      background: #2563eb;
+      transition: width 0.3s ease;
     }
     #controls {
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      padding: 16px;
+      padding: 14px 16px;
       background: #fff;
-      border-top: 1px solid #eee;
       gap: 16px;
     }
     .nav-btn {
@@ -73,35 +88,13 @@
       height: 20px;
       fill: #333;
     }
-    #progressWrapper {
-      flex: 1;
-      max-width: 600px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-    #progressBar {
-      flex: 1;
-      height: 4px;
-      background: #eee;
-      border-radius: 2px;
-      overflow: hidden;
-    }
-    #progressFill {
-      height: 100%;
-      background: #2563eb;
-      border-radius: 2px;
-      transition: width 0.3s ease;
-    }
     #pageInfo {
       font-family: system-ui, -apple-system, sans-serif;
       font-size: 13px;
       color: #666;
       white-space: nowrap;
-      min-width: 50px;
+      min-width: 60px;
       text-align: center;
-      line-height: 40px;
     }
     #loading, #error {
       position: absolute;
@@ -123,17 +116,17 @@
       <div id="loading">Loading...</div>
       <div id="error"></div>
     </div>
-    <div id="controls">
-      <button class="nav-btn" id="prevBtn" aria-label="Previous">
-        <svg viewBox="0 0 24 24"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
-      </button>
-      <div id="progressWrapper">
-        <div id="progressBar"><div id="progressFill"></div></div>
+    <div id="controlsWrapper">
+      <div id="progressBar"><div id="progressFill"></div></div>
+      <div id="controls">
+        <button class="nav-btn" id="prevBtn" aria-label="Previous">
+          <svg viewBox="0 0 24 24"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
+        </button>
         <div id="pageInfo"></div>
+        <button class="nav-btn" id="nextBtn" aria-label="Next">
+          <svg viewBox="0 0 24 24"><path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/></svg>
+        </button>
       </div>
-      <button class="nav-btn" id="nextBtn" aria-label="Next">
-        <svg viewBox="0 0 24 24"><path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/></svg>
-      </button>
     </div>
   </div>
 
@@ -183,6 +176,8 @@
         var baseScale;
         if (isMobile()) {
           baseScale = containerWidth / originalViewport.width;
+          var displayHeight = originalViewport.height * baseScale;
+          canvasContainer.style.height = displayHeight + "px";
         } else {
           var scaleX = containerWidth / originalViewport.width;
           var scaleY = containerHeight / originalViewport.height;
@@ -250,6 +245,9 @@
     });
 
     window.addEventListener("resize", function() {
+      if (isMobile()) {
+        canvasContainer.style.height = "auto";
+      }
       if (pdfDoc && !rendering) renderPage(pageNum);
     });
 
