--- a/index.html/index.html
+++ b/index.html/index.html
@@ -151,7 +151,7 @@
         </button>
       </div>
       <div id="downloadWrapper">
-        <button id="downloadBtn">Download</button>
+          <a id="downloadBtn" href="./deck.pdf" download="NVA_Solution_Deck.pdf">Download</a>
       </div>
     </div>
   </div>
